--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,11 @@
       "dest": "/public/index.php"
     }
   ],
+  "functions": {
+    "public/index.php": {
+      "runtime": "vercel-php@0.6.0"
+    }
+  },
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "false",
